kotlin-parser/src/test/semlang/validatorTests/fail/naturalLiteral3.sem
function myStuff.myFunction(): Natural {
  return Natural."-0"
}
